--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.9.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "html-webpack-plugin": "^5.6.0",
+    "prettier": "^3.2.1",
     "style-loader": "^3.3.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
