chore: add precommit

--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,7 @@
   "trailingComma": "all",
   "printWidth": 100,
   "tabWidth": 4,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "quoteProps": "as-needed",
+  "bracketSameLine": false
 }
