--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "deploy": "gh-pages -d build",
         "start": "webpack serve",
         "build": "webpack",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "test": "jest"
     },
     "lint-staged": {
         "*.{js, jsx,ts,tsx}": [
@@ -22,6 +23,10 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.24.0",
+        "@babel/preset-env": "^7.24.0",
+        "@jest/globals": "^29.7.0",
+        "babel-jest": "^29.7.0",
         "copy-webpack-plugin": "^12.0.1",
         "css-loader": "^6.9.0",
         "eslint": "^8.56.0",
@@ -29,6 +34,7 @@
         "eslint-plugin-prettier": "^5.1.3",
         "html-webpack-plugin": "^5.6.0",
         "husky": "^8.0.0",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "mini-css-extract-plugin": "^2.7.7",
         "prettier": "^3.2.5",
